--- a/templates/event/index.html.twig
+++ b/templates/event/index.html.twig
@@ -3,39 +3,44 @@
 {% block title %}Event index{% endblock %}
 
 {% block body %}
-    <h1>Event index</h1>
+    <div class="container mx-auto -y-5 shadow-lg">
+        <h1>Event index</h1>
+        <a href="{{ path('app_event_new') }}" class="btn btn-success w-100"><i class="material-icons">add</i>&nbsp;Ajouter un Evenement</a>
 
-    <table class="table">
-        <thead>
+        <table class="table table-sm table-dark table-striped">
+            <thead>
             <tr>
                 <th>Id</th>
-                <th>CreatedAt</th>
-                <th>EventDate</th>
-                <th>Title</th>
-                <th>Detail</th>
+                <th>Créé le</th>
+                <th>Date</th>
+                <th>Titre</th>
                 <th>actions</th>
             </tr>
-        </thead>
-        <tbody>
-        {% for event in events %}
-            <tr>
-                <td>{{ event.id }}</td>
-                <td>{{ event.createdAt ? event.createdAt|date('Y-m-d H:i:s') : '' }}</td>
-                <td>{{ event.eventDate ? event.eventDate|date('Y-m-d H:i:s') : '' }}</td>
-                <td>{{ event.title }}</td>
-                <td>{{ event.detail }}</td>
-                <td>
-                    <a href="{{ path('app_event_show', {'id': event.id}) }}">show</a>
-                    <a href="{{ path('app_event_edit', {'id': event.id}) }}">edit</a>
-                </td>
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="6">no records found</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
+            </thead>
+            <tbody>
+            {% for event in events %}
+                <tr>
+                    <td>{{ event.id }}</td>
+                    <td><span hidden>{{ event.createdAt|date('Y-m-d H:i:s') }}</span>{{ event.createdAt ? event.createdAt|date('d/m/Y H:i') : '' }}</td>
+                    <td><span hidden>{{ event.eventDate|date('Y-m-d H:i:s') }}</span>{{ event.eventDate ? event.eventDate|date('d/m/Y H:i') : '' }}</td>
+                    <td>{{ event.title }}</td>
+                    <td class="d-flex justify-content-evenly">
+                        <a href="{{ path('app_event_show', {'id': event.id}) }}" class="btn btn-info"><i class="material-icons">visibility</i></a>
+                        <a href="{{ path('app_event_edit', {'id': event.id}) }}" class="btn btn-warning"><i class="material-icons">edit</i></a>
+                        <form method="post" action="{{ path('app_event_delete', {'id': event.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+                            <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ event.id) }}">
+                            <button class="btn btn-danger"><i class="material-icons">delete_forever</i></button>
+                        </form>
+                    </td>
+                </tr>
+            {% else %}
+                <tr>
+                    <td colspan="6">no records found</td>
+                </tr>
+            {% endfor %}
+            </tbody>
+        </table>
 
-    <a href="{{ path('app_event_new') }}">Create new</a>
+{#        <a href="{{ path('app_event_new') }}">Create new</a>#}
+    </div>
 {% endblock %}
