--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -3,15 +3,16 @@
 {% block title %}User index{% endblock %}
 
 {% block body %}
-    <h1>User index</h1>
+<div class="container mx-auto -y-5 shadow-lg">
+    <h1>Liste des Utilisateurs</h1>
 
-    <table class="table">
+    <table class="table table-sm table-dark table-striped">
         <thead>
             <tr>
                 <th>Id</th>
                 <th>Email</th>
                 <th>Roles</th>
-                <th>Password</th>
+{#                <th>Password</th>#}
                 <th>actions</th>
             </tr>
         </thead>
@@ -21,10 +22,17 @@
                 <td>{{ user.id }}</td>
                 <td>{{ user.email }}</td>
                 <td>{{ user.roles ? user.roles|json_encode : '' }}</td>
-                <td>{{ user.password }}</td>
-                <td>
-                    <a href="{{ path('app_user_show', {'id': user.id}) }}">show</a>
-                    <a href="{{ path('app_user_edit', {'id': user.id}) }}">edit</a>
+{#                <td>{{ user.password }}</td>#}
+                <td class="d-flex justify-content-center">
+                    <a href="{{ path('app_user_show', {'id': user.id}) }}" class="btn btn-info"><i class="material-icons">visibility</i></a>
+                    <a href="{{ path('app_user_edit', {'id': user.id}) }}" class="btn btn-warning"><i class="material-icons">edit</i></a>
+                    <form method="post" action="{{ path('app_user_delete', {'id': user.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+                        <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ user.id) }}">
+                        <button class="btn btn-danger">
+                            <i class="material-icons">delete_forever</i>
+                        </button>
+                    </form>
+
                 </td>
             </tr>
         {% else %}
@@ -36,4 +44,5 @@
     </table>
 
     <a href="{{ path('app_user_new') }}">Create new</a>
+</div>
 {% endblock %}
