--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -61,6 +61,9 @@
                     <li class="nav-item">
                         <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">{{ app.user.email }}</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ path('app_logout') }}">Logout</a>
+                    </li>
                 </ul>
             </div>
         </div>
