--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -26,7 +26,7 @@
                     {% if key is same as(0)  %}
                         <img style="float:right;margin-top:10px;margin-right:15px;width: 20%"
                              src="{{ asset('uploads/event/'~ image.name) }}"
-                             alt="Script R"/>
+                             alt="Photo du prochain Evenement"/>
                     {% endif %}
                 {% endfor %}
                 <h2>{{ event.title }}</h2>
